# bitvec

./: .gitignore  CMakeLists.txt
cmake/: BitVecConfig.cmake.in
include/bitvec/: core.h  debug.h  type.h  utils.h
src/: BitVec.cc  changable.cc  debug.cc  example.cc
test/: CMakeLists.txt
test/src/: TestBitRef.cc  TestBitVec.cc  TestChangable.cc  TestRand.cc  main.cc  main.cpp  utils.cc
test/src/TestBitVec/: TestChangable.cc  TestOperator.cc  TestUtils.cc
test/src/include/: utils.h
